 - When doing addH on files from MD trajectory, the program crashed because not
   all HIS are named HIS.  I altered common/ProcessInputFiles.py so that it
   could find HIS named HSE or HSD as well.

070201:
 - Altered ParseCharmm|Uhbd.py.  Now sorts file_list before passing to UHBD.
 - Altered CharmmInterface.py.  Made titr_dict and possible_his compatible with
   GROMACS pdb files.  (i.e. HISA/HISB/LYSH recognized residues.)
 - Added UhbdSingleFunctions.py.  This module is exactly analogous to
   UhbdFullFunctions and performs prepares and doinps.  As a consequence,
   termini addition now works properly.

070202:
 - Fixed removed SomeError except statement.  (Error would be raised as IOError
   in SystemOps).

080128:
 - I moved the addH capability into the pdb_tools module. The program now adds
   termini correctly by comparing the ATOM sequence to the SEQRES sequence to 
   determine if the whole sequence is in the structure.  The user can no longer
   specify whether or not to use termini.  
 - Deals with multiple chains (they are flattened by pdb_addH.py)
 - Fixes incorrect pdb file headers.
 - Accepts pdb files with arbitrarily long file names.   This previously did not
   work because the original fortran only looks at 30 characters.  To get around
   this, the program renames all pdb files to proteinH.pdb before passing to
   UHBD).
 - Checks for errors in the UHBD output.  
 - Spits out a more detailed log of what it is doing at each step.

080519:
 - Changed output directory structure so it no longer has single or full 
   subdirectory.  This is because the full/single calculations have to be in 
   separate directories anyway because they have different pdb files.  This
   directory was therefore superfluous.
 - Full calculation now saves sites.dat (required for the "hybrid" calculation
   if done later).
 - Input pdb file now saved in each output directory.  Each directory now 
   contains all information required to repeat the calculation manually.