@@ -75,3 +75,9 @@
    if done later).
  - Input pdb file now saved in each output directory.  Each directory now 
    contains all information required to repeat the calculation manually.
+ - prepareFull no longer queries parameter file to see what residues to place 
+   in allgroups.pdb.  Although this was probably the correct way to do this,
+   the "standard" implementation is to always take a certain set of atoms for
+   every residue, regardless of what's in the parameter file.  Stupid.  I 
+   deleted my "correct" code; it can be recapitulated by using svn to access
+   revision 189.
